Fix file block header overflow.

--- a/client/web/src/search/notebook/fileBlock/SearchNotebookFileBlock.module.scss
+++ b/client/web/src/search/notebook/fileBlock/SearchNotebookFileBlock.module.scss
@@ -16,6 +16,7 @@
     border-bottom: 1px solid var(--border-color);
     border-top-left-radius: var(--border-radius);
     border-top-right-radius: var(--border-radius);
+    overflow-wrap: break-word;
 }
 
 .header-file-link:not(:hover) {
